# broky

./: .clang-format  .gitignore  BROKY.md  CMakeLists.txt  LICENSE  Makefile  README.md
fbs/: CMakeLists.txt  message.fbs  requests.fbs
include/: client.h  dispatcher.h  listener.h  macros.h  master.h  math.h  memory.h  worker.h
include/client/: memory.h  tty.h
include/common/: macros.h  math.h
include/protocol/: protocol.h
include/server/: dispatcher.h  stream.h  worker.h
src/: CMakeLists.txt  client.c  dispatcher.c  listener.c  main.c  master.c  memory.c  stream.c  worker.c
src/client/: CMakeLists.txt  main.c  tty.c
src/protocol/: CMakeLists.txt  protocol.c
src/protocol/test/: CMakeLists.txt  main.c
src/server/: CMakeLists.txt  dispatcher.c  listener.c  log.c  main.c  memory.c  stream.c  worker.c
src/server/test/: CMakeLists.txt  main.c
src/server_test/: CMakeLists.txt
src/test_fbs/: CMakeLists.txt  main.c
